# wezterm-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  flake.nix  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
src/: errors.rs  handlers.ts  index.ts  main.rs  server.rs  tools.rs  tools.ts  wezterm.rs  wezterm.ts
src/tools/: pane.rs  query.rs  tab.rs  window.rs
tests/: e2e.rs
