[package]
name = "mcp-server-wezterm"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
