[package]
name = "mcp-server-wezterm"
version = "0.1.1"
edition = "2024"
description = "MCP server for WezTerm terminal"
license = "MIT"
repository = "https://github.com/vaporif/mcp-server-wezterm"
keywords = ["mcp", "wezterm"]

[features]
test-mock = []

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "mock-wezterm"
path = "src/bin/mock_wezterm.rs"
required-features = ["test-mock"]

[dev-dependencies]
rmcp = { version = "1.1", features = ["client", "transport-child-process"] }
serde_json = "1"
tempfile = "3"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
